{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 370,
  "lineage": "87b6c1fb-193a-4bfe-a5d2-8a566889c546",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private-VM-AZ-1-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5873df7e1f05a09",
            "arn": "arn:aws:ec2:eu-north-1:034362069537:instance/i-0224aef69c2b6cd9b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0224aef69c2b6cd9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-Terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0abe8d997cdbfdf",
            "private_dns": "ip-10-0-2-215.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d85bd06e2b651dee",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7ca8965c6710a7c",
            "tags": {
              "Name": "Private-VM-AZ-1-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Private-VM-AZ-1-Terraform",
              "name": "Created-by-Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba1cc5fb3e60f64a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-Terraform",
            "aws_subnet.Private-Subnet-AZ-1",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private-VM-AZ-2-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5873df7e1f05a09",
            "arn": "arn:aws:ec2:eu-north-1:034362069537:instance/i-06b7d1799759123fa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b7d1799759123fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-Terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fdfa06ea3d544faa",
            "private_dns": "ip-10-0-3-159.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06849106e8d3291d2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e81363b3b84eb9a7",
            "tags": {
              "Name": "Private-VM-AZ-2-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Private-VM-AZ-2-Terraform",
              "name": "Created-by-Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba1cc5fb3e60f64a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-Terraform",
            "aws_subnet.Private-Subnet-AZ-2",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public-VM-AZ-1-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5873df7e1f05a09",
            "arn": "arn:aws:ec2:eu-north-1:034362069537:instance/i-046aa8b6d8780b0d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046aa8b6d8780b0d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-Terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c288db9d579ff5af",
            "private_dns": "ip-10-0-0-193.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.193",
            "public_ip": "13.61.187.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0588d290674d79fff",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bb3e491dea50327",
            "tags": {
              "Name": "Public-VM-AZ-1-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Public-VM-AZ-1-Terraform",
              "name": "Created-by-Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba1cc5fb3e60f64a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-Terraform",
            "aws_subnet.Public-Subnet-AZ-1",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:internet-gateway/igw-016fb54228aa4b6b9",
            "id": "igw-016fb54228aa4b6b9",
            "owner_id": "034362069537",
            "tags": {
              "Name": "igw-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "igw-Terraform",
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:loadbalancer/app/lb-Terraform/ea20b2320936043a",
            "arn_suffix": "app/lb-Terraform/ea20b2320936043a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-Terraform-588002809.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:loadbalancer/app/lb-Terraform/ea20b2320936043a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-Terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c7b2f25fc2e4614"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bb3e491dea50327"
              },
              {
                "subnet_id": "subnet-0bb87d429e606d967"
              }
            ],
            "subnets": [
              "subnet-02bb3e491dea50327",
              "subnet-0bb87d429e606d967"
            ],
            "tags": {
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.sg-Load-Balancer-Terraform",
            "aws_subnet.Public-Subnet-AZ-1",
            "aws_subnet.Public-Subnet-AZ-2",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-Listener-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:listener/app/lb-Terraform/ea20b2320936043a/06835a90810ee240",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:listener/app/lb-Terraform/ea20b2320936043a/06835a90810ee240",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:loadbalancer/app/lb-Terraform/ea20b2320936043a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "lb-Listener-HTTP",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "lb-Listener-HTTP",
              "name": "Created-by-Terraform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-Terraform",
            "aws_lb_target_group.lb-Target-Group-Terraform",
            "aws_security_group.sg-Load-Balancer-Terraform",
            "aws_subnet.Public-Subnet-AZ-1",
            "aws_subnet.Public-Subnet-AZ-2",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-Target-Group-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
            "arn_suffix": "targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:034362069537:loadbalancer/app/lb-Terraform/ea20b2320936043a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-Target-Group-Terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "name": "Created-by-Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417-20250328113843759800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
            "target_id": "i-0224aef69c2b6cd9b"
          },
          "dependencies": [
            "aws_instance.Private-VM-AZ-1-Terraform",
            "aws_lb_target_group.lb-Target-Group-Terraform",
            "aws_security_group.sg-Terraform",
            "aws_subnet.Private-Subnet-AZ-1",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417-20250328113843436700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:034362069537:targetgroup/lb-Target-Group-Terraform/f5f4343a224b1417",
            "target_id": "i-06b7d1799759123fa"
          },
          "dependencies": [
            "aws_instance.Private-VM-AZ-2-Terraform",
            "aws_lb_target_group.lb-Target-Group-Terraform",
            "aws_security_group.sg-Terraform",
            "aws_subnet.Private-Subnet-AZ-2",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:route-table/rtb-0e25f23f4868a6750",
            "id": "rtb-0e25f23f4868a6750",
            "owner_id": "034362069537",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016fb54228aa4b6b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "rt-Terraform",
              "name": "Created-by-Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-Terraform",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-Terraform-Public-Subnet-AZ-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0954234a25e57e54e",
            "route_table_id": "rtb-0e25f23f4868a6750",
            "subnet_id": "subnet-02bb3e491dea50327"
          },
          "dependencies": [
            "aws_internet_gateway.igw-Terraform",
            "aws_route_table.rt-Terraform",
            "aws_subnet.Public-Subnet-AZ-1",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-Terraform-Public-Subnet-AZ-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c03e74ee51b779b",
            "route_table_id": "rtb-0e25f23f4868a6750",
            "subnet_id": "subnet-0bb87d429e606d967"
          },
          "dependencies": [
            "aws_internet_gateway.igw-Terraform",
            "aws_route_table.rt-Terraform",
            "aws_subnet.Public-Subnet-AZ-2",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-Load-Balancer-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:security-group/sg-01c7b2f25fc2e4614",
            "description": "Allow request to Application Load Balancer created through Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c7b2f25fc2e4614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250328111717302900000003",
            "name_prefix": "terraform-",
            "owner_id": "034362069537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-Load-Balancer-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "sg-Load-Balancer-Terraform",
              "name": "Created-by-Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-MS-SQL-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:security-group/sg-091743cc7002e1b90",
            "description": "Allow request to MS SQL Server Database created through Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress created through Terraform",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091743cc7002e1b90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress created through Terraform",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "terraform-20250328111717299000000001",
            "name_prefix": "terraform-",
            "owner_id": "034362069537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-MS-SQL-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "sg-MS-SQL-Terraform",
              "name": "Created-by-Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:security-group/sg-0ba1cc5fb3e60f64a",
            "description": "Allow HTTPS to web server created through Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress created through Terraform",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba1cc5fb3e60f64a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress created through Terraform",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "terraform-20250328111717299500000002",
            "name_prefix": "terraform-",
            "owner_id": "034362069537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "sg-Terraform",
              "name": "Created-by-Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-AZ-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:subnet/subnet-0e7ca8965c6710a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7ca8965c6710a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362069537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ-1",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ-1",
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-AZ-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:subnet/subnet-0e81363b3b84eb9a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e81363b3b84eb9a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362069537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ-2",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ-2",
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-AZ-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:subnet/subnet-02bb3e491dea50327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bb3e491dea50327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362069537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ-1",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ-1",
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-AZ-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:subnet/subnet-0bb87d429e606d967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb87d429e606d967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362069537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ-2",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ-2",
              "name": "Created-by-Terraform"
            },
            "vpc_id": "vpc-0e78d76d21b9fbbc8"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:034362069537:vpc/vpc-0e78d76d21b9fbbc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0636536c0b4872838",
            "default_route_table_id": "rtb-08490d18a917e88e9",
            "default_security_group_id": "sg-02916490a53ec2757",
            "dhcp_options_id": "dopt-0942f024e1a0bf8a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e78d76d21b9fbbc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08490d18a917e88e9",
            "owner_id": "034362069537",
            "tags": {
              "Name": "VPC-Terraform",
              "name": "Created-by-Terraform"
            },
            "tags_all": {
              "Name": "VPC-Terraform",
              "name": "Created-by-Terraform"
            }
          }
        }
      ]
    }
  ]
}